<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Featurevisor Example</string>
    <string name="title">Featurevisor for Android</string>
    <string name="subtitle">Evaluating features and global variables with the Featurevisor SDK.</string>
    <string name="loading_datafile">Loading datafile…</string>
    <string name="try_again">Try again</string>
    <string name="unknown_error">An unknown error occurred.</string>
    <string name="no_value">none</string>
    <string name="results_title">SDK evaluation results</string>
    <string name="flag_label">Flag</string>
    <string name="variation_label">Variation</string>
    <string name="max_items_label">Maximum checkout items</string>
    <string name="payment_methods_label">Payment methods</string>
    <string name="service_endpoint_label">Service endpoint</string>
    <string name="support_contact_label">Support contact</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
</resources>
